nullaway_error_5c5b312f-a620-499e-9e90-225a16b26e6e.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/animation/Animation.java:77: error: [NullAway] dereferenced expression spritesheet is @Nullable
    this(spritesheet.getName(), spritesheet, loop, randomizeStart, keyFrameDurations);
                    ^
    (see http://t.uber.com/nullaway )
